--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="skill-row">
             <img class="basketball" src="images\sports-and-competition.png" alt="basketball">
-            <h3>Basketballer</h3>
+            <h3>Baller</h3>
             <p>Not a professional player but love the sport , I started basketball when i was  12 since then its my faviourite sport.</p>
           </div>
         </div>
